[metadata]
name = napari-crop
version = 0.1.1
author = Robert Haase
author_email = robert.haase@tu-dresden.de
license = BSD-3-Clause
url = https://github.com/haesleinhuepf/napari-crop
description = Crop regions in napari manually
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/napari-crop/issues
    Documentation = https://github.com/haesleinhuepf/napari-crop#README.md
    Source Code = https://github.com/haesleinhuepf/napari-crop
    User Support = https://github.com/haesleinhuepf/napari-crop/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    scikit-image
    napari-tools-menu


[options.entry_points] 
napari.plugin = 
    napari-crop = napari_crop
